--- a/css/general.css
+++ b/css/general.css
@@ -10,7 +10,7 @@
   Bold: 700
 
   02. Colors
-  #5747a8
+  #ef6533
 
   03. Shadows
   0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
@@ -22,9 +22,9 @@
 **/
 
 :root {
-  --primary-color: #5747a8;
+  --primary-color: #ef6533;
 
-  --bg-primary: #5747a8;
+  --bg-primary: #ef6533;
   --text-black-primary: #333;
   --text-white-primary: #f5f5f5;
 
@@ -61,6 +61,10 @@ a {
   text-decoration: none;
 }
 
+.text-accent {
+  color: var(--primary-color);
+}
+
 .mr-2 {
   margin-right: 4px;
 }
@@ -75,13 +79,17 @@ a:hover {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   width: 100%;
   margin: 0 auto;
 }
 
 .flex {
   display: flex;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .justify-between {
